<resources>
    <string name="app_name">Cozy Candy Bloom</string>
    <string name="score_zero">Score: 0</string>
    <string name="score_format">Score: %1$d</string>
    <string name="coins_format">Coins: %1$d</string>
    <string name="target_format">Target: %1$d</string>
    <string name="select_level">Select Level</string>
    <string name="level_button_format">Level %1$d</string>
    <string name="level_locked_format">Level %1$d \uD83D\uDD12</string>
    <string name="level_complete_title">Level Complete!</string>
    <string name="level_complete_message">Sweet! You hit the target score.</string>
    <string name="level_complete_coins_message">You earned %1$d coins from your score.</string>
    <string name="next_level">Next Level</string>
    <string name="back_to_levels">Levels</string>
    <string name="rocket">\uD83D\uDE80 Rocket</string>
    <string name="bomb">\uD83D\uDCA3 Bomb</string>
    <string name="paddle">\uD83C\uDFD3 Paddle</string>
    <string name="rocket_count_format">\uD83D\uDE80 %1$d</string>
    <string name="bomb_count_format">\uD83D\uDCA3 %1$d</string>
    <string name="paddle_count_format">\uD83C\uDFD3 %1$d</string>
    <string name="powerup_off">Power-up: Off</string>
    <string name="powerup_rocket">Rocket: tap a candy to clear its row + column</string>
    <string name="powerup_bomb">Bomb: tap a candy to clear a 5\u00d75 area</string>
    <string name="powerup_paddle">Paddle: tap a candy to clear only that one</string>
    <string name="shop_button">Shop</string>
    <string name="shop_title">Shop</string>
    <string name="buy_button">Buy</string>
    <string name="price_format">%1$d coins</string>
    <string name="owned_format">Owned: %1$d</string>
    <string name="not_enough_coins">Not enough coins</string>
    <string name="settings_button">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="settings_skin_section">Candy Skin</string>
    <string name="settings_frame_section">Tile Frame</string>
    <string name="settings_fps_section">Performance (FPS)</string>
    <string name="fps_60">60 FPS</string>
    <string name="fps_90">90 FPS</string>
    <string name="rocket_emoji">\uD83D\uDE80</string>
    <string name="bomb_emoji">\uD83D\uDCA3</string>
    <string name="paddle_emoji">\uD83C\uDFD3</string>
    <string name="booster_count_format">%1$d</string>
    <string name="play_button">Play</string>
</resources>
